bfast.jpeg and index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Your Slice of Morning Heaven</h1>
+
+        <img src="./bfast.jpeg" width="500" height="281">
+
+        <p>Considerd the most important meal of the day, breakfast should be filled 
+            with great taste to set the pace for the rest of the day! So in honer of that
+        we have brought to you three amazing dishes to help you start the day right. </p>
+
         <ul>
             <li><a href="../odin-recipes/recipes/BreakfastCasserole.html">
             Breakfast Casserole</a></li>
